--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,31 @@
     <string name="calculadora">Calculadora</string>
     <string name="IMC">IMC</string>
     <string name="cero">0</string>
+    <string name="CLEAR">CLEAR</string>
+    <string name="Dividir">/</string>
+    <string name="Siete">7</string>
+    <string name="Ocho">8</string>
+    <string name="Nueve">9</string>
+    <string name="Multiplicar">X</string>
+    <string name="Cuatro">4</string>
+    <string name="Cinco">5</string>
+    <string name="Seis">6</string>
+    <string name="Restar">-</string>
+    <string name="Uno">1</string>
+    <string name="Dos">2</string>
+    <string name="Tres">3</string>
+    <string name="Sumar">+</string>
+    <string name="Cero">0</string>
+    <string name="Punto">.</string>
+    <string name="Igual">=</string>
+    <string name="Fracciones">Fracción</string>
+    <string name="Ecuacion">Ecuación</string>
+    <string name="Cos">Cos</string>
+    <string name="Tan">Tan</string>
+    <string name="Sin">Sin</string>
+    <string name="Deg">Deg</string>
+    <string name="LG">Lg</string>
+    <string name="IN">In</string>
+    <string name="ParentesisAbierto">(</string>
+    <string name="ParentesisCerrado">)</string>
 </resources>
